--- a/Zadanie/Zadanie.csproj
+++ b/Zadanie/Zadanie.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Zadanie1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Zadanie1.Designer.cs">
+      <DependentUpon>Zadanie1.cs</DependentUpon>
+    </Compile>
     <Compile Include="menu.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -54,6 +60,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Zadanie1.resx">
+      <DependentUpon>Zadanie1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="menu.resx">
       <DependentUpon>menu.cs</DependentUpon>
     </EmbeddedResource>
