--- a/Zadanie/Zadanie.csproj
+++ b/Zadanie/Zadanie.csproj
@@ -93,6 +93,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Zadanie5.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Zadanie5.Designer.cs">
+      <DependentUpon>Zadanie5.cs</DependentUpon>
+    </Compile>
     <Compile Include="Zadanie4.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -149,6 +155,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Zadanie5.resx">
+      <DependentUpon>Zadanie5.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
